# snip

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/snip/: __init__.py  cli.py  storage.py
tests/: test_cli.py  test_storage.py
