[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snip"
version = "0.1.0"
description = "A CLI tool to save, search, and retrieve code snippets"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pyperclip>=1.8",
    "rich>=13.0",
]

[project.scripts]
snip = "snip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
